[#379] Fix button alignment for team (#386)

--- a/themes/custom/apigee_kickstart/assets/css/apigee-kickstart.style.css
+++ b/themes/custom/apigee_kickstart/assets/css/apigee-kickstart.style.css
@@ -12190,6 +12190,13 @@ li.dropbutton-toggle {
   transform: rotate(-180deg);
 }
 
+td .dropbutton-single .dropbutton-widget {
+  position: static;
+}
+td .dropbutton-single .dropbutton-action a {
+  border-radius: 4px;
+}
+
 .field__label {
   letter-spacing: 0.25px;
   font-weight: 500;
