--- a/themes/custom/apigee_kickstart/src/components/dropbutton/_dropbutton.scss
+++ b/themes/custom/apigee_kickstart/src/components/dropbutton/_dropbutton.scss
@@ -175,3 +175,18 @@ li.dropbutton-toggle {
     transform: rotate(-180deg);
   }
 }
+
+// Dropbutton Single
+// -----------------------------------------------------------------------------
+
+td .dropbutton-single {
+  .dropbutton-widget {
+    position: static;
+  }
+
+  .dropbutton-action {
+    a {
+      border-radius: 4px;
+    }
+  }
+}
